more doc updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <body>
 <br>
    <img class="logo" src="mgx_logo.png"></img>
+   <img class="logo_right" src="denbi_logo.png"></img>
    <h1>MGX metagenome analysis platform</h1>
 
    <div>
@@ -113,6 +114,7 @@ function showSlides(n) {
       <li>Statistics: PCA, PCoA, Rarefaction, ..</li>
       <li>Fragment recruitment</li>
       <li>Sequence export</li>
+      <li>Custom pipeline support</li>
     </ul>
   </p>
 
@@ -141,16 +143,16 @@ function showSlides(n) {
 
   <h3>MGX graphical user interface</h3>
   <p>
-    The latest version of the MGX client application is provided as a platform-independent .zip archive at <a href="https://github.com/MGX-metagenomics/MGX-gui/releases">MGX GUI client download</a>.
+    The latest version of the MGX client application is provided as a platform-independent .zip archive from the <a href="https://github.com/MGX-metagenomics/MGX-gui/releases">releases</a> page.
   </p>
 
   <h3>Funding</h3>
-  <img class="logo" src="denbi_logo.png"></img>
+  <img class="logo_small" src="denbi_logo.png" width="15%"></img>
   <p>
     Funding for the operation and maintenance of MGX is provided by the 
     <a href="http://www.bmbf.de">German Federal Ministry of Education and Research (BMBF)</a> project 
-    <q>Bielefeld-Gie&szlig;en Center for Microbial Bioinformatics - BiGi</q> (grant 031A533) within the
-    German Network for Bioinformatics Infrastructure (de.NBI).
+    <q><a href="https://www.denbi.de/bigi">Bielefeld-Gie&szlig;en Center for Microbial Bioinformatics - BiGi</a></q> (grant 031A533) within the
+    German Network for Bioinformatics Infrastructure (<a href="https://www.denbi.de/">de.NBI</a>).
   </p>
 
   <h3>Additional links</h3>
