--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ function showSlides(n) {
 
   <h3>Project request</h3>
   <p>
-    We operate and maintain two public MGX server instances hosted at the <a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology</a> group at <a href="http://www.uni-giessen.de/">JLU Giessen</a>
-    and <a href="http://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a>, <a href="http://www.uni-bielefeld.de">Bielefeld University</a>. To
+    We operate and maintain two public MGX server instances hosted at the <a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology</a> group at <a href="https://www.uni-giessen.de/">JLU Giessen</a>
+    and <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a>, <a href="https://www.uni-bielefeld.de">Bielefeld University</a>. To
     obtain a protected project for analysis of own metagenome data, please 
     <a href="mailto:mgx@computational.bio.uni-giessen.de?subject=MGX%20private%20project%20request">get in touch with us</a> and provide the following
     information:
@@ -150,7 +150,7 @@ function showSlides(n) {
   <img class="logo_small" src="denbi_logo.png" width="15%"></img>
   <p>
     Funding for the operation and maintenance of MGX is provided by the 
-    <a href="http://www.bmbf.de">German Federal Ministry of Education and Research (BMBF)</a> project 
+    <a href="https://www.bmbf.de">German Federal Ministry of Education and Research (BMBF)</a> project 
     <q><a href="https://www.denbi.de/bigi">Bielefeld-Gie&szlig;en Center for Microbial Bioinformatics - BiGi</a></q> (grant 031A533) within the
     German Network for Bioinformatics Infrastructure (<a href="https://www.denbi.de/">de.NBI</a>).
   </p>
@@ -158,7 +158,7 @@ function showSlides(n) {
   <h3>Additional links</h3>
   <p>
     <ul>
-      <li>Synthetic metagenomes used in the MGX manuscript are available from the <a href="http://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a>.</li>
+      <li>Synthetic metagenomes used in the MGX manuscript are available from the <a href="https://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a>.</li>
       <li><a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology at JLU Giessen</a></li>
       <li><a href="https://www.denbi.de/">de.NBI - German network for bioinformatics infrastructure</a></li>
     </ul>
@@ -166,7 +166,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- Sebastian Jaenicke, 2018-02-26
+ <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2018-02-26
  </p>
 
  </body>
