add more images

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@ existing tools.
     <img src="slides/4.png" style="width:80%">
   </div>
 
+  <div class="mySlides fade">
+    <img src="slides/5.png" style="width:80%">
+  </div>
+
+  <div class="mySlides fade">
+    <img src="slides/6.png" style="width:80%">
+  </div>
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -71,6 +78,8 @@ existing tools.
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
   <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
 </div>
 
 <script>
