more images added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@ existing tools.
     <img src="slides/6.png" style="width:80%">
   </div>
 
+  <div class="mySlides fade">
+    <img src="slides/7.png" style="width:80%">
+  </div>
+
+  <div class="mySlides fade">
+    <img src="slides/8.png" style="width:80%">
+  </div>
+
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -80,6 +88,8 @@ existing tools.
   <span class="dot" onclick="currentSlide(4)"></span>
   <span class="dot" onclick="currentSlide(5)"></span>
   <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+  <span class="dot" onclick="currentSlide(8)"></span>
 </div>
 
 <script>
