add citation and bibtex/endnote files

--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@ function showSlides(n) {
     The latest version of the MGX client application is provided as a platform-independent .zip archive from the <a href="https://github.com/MGX-metagenomics/MGX-gui/releases">releases</a> page.
   </p>
 
+  <h3>Citation</h3>
+  <p>
+    <i>Flexible metagenome analysis using the MGX framework</i><br/>
+    Sebastian Jaenicke, Stefan P. Albaum, Patrick Blumenkamp, Burkhard Linke, Jens Stoye and Alexander Goesmann<br/>
+    Microbiome 2018 <b>6</b>:76<br/>
+    DOI: <a href="https://doi.org/10.1186/s40168-018-0460-1">10.1186/s40168-018-0460-1</a><br/><br/>
+
+    Export citation in <a href="mgx.bib">BibTeX</a> or <a href="mgx.enw">EndNote</a> format.
+  </p>
+
   <h3>Funding</h3>
   <img class="logo_small" src="denbi_logo.png" width="15%"></img>
   <p>
@@ -185,7 +195,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2018-02-26
+ <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2018-04-25
  </p>
 
  </body>
