add notice for jlu giessen outage

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@ function showSlides(n) {
 }
 </script>
 
+  <h3>News</h3>
+  <p style="color:red">
+    JLU Giessen has currently decided to shut down its internet connection due to
+    a major security incident. As of now, the MGX server hosted at JLU Giessen is
+    not available from outside networks. Also, we're unable to receive and/or
+    answer new project requests or support inquiries. The server operated at
+    Bielefeld University, however, is not affected.
+
+  </p>
+  <p style="color:red">
+  
+    Until this issue is resolved, please contact me at <a href="mailto:sjaenick@cebitec.uni-bielefeld.de?subject=MGX%20inquiry">my address at Bielefeld University</a>.  
+  </p>
+
   <h3>Features</h2>
   <p>
     <ul>
@@ -195,7 +209,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2018-04-25
+ <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2019-12-11
  </p>
 
  </body>
