update outage message

--- a/index.html
+++ b/index.html
@@ -127,14 +127,13 @@ function showSlides(n) {
   <p style="color:red">
     JLU Giessen has currently decided to shut down its internet connection due to
     a major security incident. As of now, the MGX server hosted at JLU Giessen is
-    not available from outside networks. Also, we're unable to receive and/or
-    answer new project requests or support inquiries. The server operated at
+    not available from outside networks. The server operated at
     Bielefeld University, however, is not affected.
 
   </p>
   <p style="color:red">
   
-    Until this issue is resolved, please contact me at <a href="mailto:sjaenick@cebitec.uni-bielefeld.de?subject=MGX%20inquiry">my address at Bielefeld University</a>.  
+    Until this issue is resolved, please contact me at <a href="mailto:sebastian.jaenicke@computational.bio.uni-giessen.de?subject=MGX%20inquiry">my personal address</a>.  
   </p>
 
   <h3>Features</h2>
@@ -209,7 +208,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2019-12-11
+ <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2019-12-21
  </p>
 
  </body>
