add news entry for sars-cov2 db update

--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@ function showSlides(n) {
     </ul>
   </p>
 
+  <h3>News</h3>
+  <p>
+    <ul>
+      <li>2020-04-06: With the most recent database update, the default taxonomic classification workflow employed
+  by MGX is now also able to recognize and classify <a href="https://en.wikipedia.org/wiki/Severe_acute_respiratory_syndrome_coronavirus_2">SARS-CoV-2</a> sequences.</li>
+    </ul>
+  </p>
+
   <h3>Project request</h3>
   <p>
     We operate and maintain two public MGX server instances hosted at the <a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology</a> group at <a href="https://www.uni-giessen.de/">JLU Giessen</a>
