--- a/guide/node3.html
+++ b/guide/node3.html
@@ -66,7 +66,7 @@ met:
 <LI>Memory requirements: <SPAN CLASS="MATH"><IMG
  WIDTH="32" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img1.png"
- ALT="$&gt;=$"></SPAN> 512MB RAM
+ ALT="$&gt;=$"></SPAN> 2GB RAM
 </LI>
 <LI>(preferably broadband) Internet connection
 </LI>
@@ -92,7 +92,7 @@ met:
 <!--End of Table of Child-Links-->
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2019-05-03
+Sebastian Jaenicke, 2020-04-28
 </ADDRESS>
 </BODY>
 </HTML>
