--- a/guide/node8.html
+++ b/guide/node8.html
@@ -57,7 +57,7 @@ available for download at
 <BR>
 <P>
 <TT><A NAME="tex2html3"
-  HREF="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/">ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/</A></TT>.
+  HREF="https://github.com/MGX-metagenomics/MGX-gui/releases">https://github.com/MGX-metagenomics/MGX-gui/releases</A></TT>.
 <BR>
 <P>
 An installation isn't necessary, just unzip the file and start the software
@@ -67,7 +67,7 @@ is available before reporting bugs.
 <P>
 <BR><HR>
 <ADDRESS>
-Sebastian Jaenicke, 2019-05-03
+Sebastian Jaenicke, 2020-04-28
 </ADDRESS>
 </BODY>
 </HTML>
