--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ function showSlides(n) {
   <h3>News</h3>
   <p>
     <ul>
-      <li>2020-12-23: The <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a> has discontinued its FTP service; benchmark datasets used in the <a href="https://doi.org/10.1186/s40168-018-0460-1">MGX manuscript</a> have been moved to <a href="https://zenodo.org">Zenodo</a> and can be retrieved using the <a href="https://doi.org/10.5281/zenodo.4382271">10.5281/zenodo.4382271</a> DOI.
+      <li>2020-12-23: The <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a> has discontinued its FTP service; benchmark datasets used in the <a href="https://doi.org/10.1186/s40168-018-0460-1">MGX manuscript</a> have been moved to <a href="https://zenodo.org">Zenodo</a> and can be retrieved using the <a href="https://doi.org/10.5281/zenodo.4382271">10.5281/zenodo.4382271</a> DOI.</li>
       <li>2020-04-06: With the most recent database update, the default taxonomic classification workflow employed
   by MGX is now also able to recognize and classify <a href="https://en.wikipedia.org/wiki/Severe_acute_respiratory_syndrome_coronavirus_2">SARS-CoV-2</a> sequences.</li>
     </ul>
