add link to KEGG copyright permission form

--- a/index.html
+++ b/index.html
@@ -199,12 +199,13 @@ function showSlides(n) {
       <li>Synthetic metagenomes used in the MGX manuscript are available from the <a href="https://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a>.</li>
       <li><a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology at JLU Giessen</a></li>
       <li><a href="https://www.denbi.de/">de.NBI - German network for bioinformatics infrastructure</a></li>
+      <li><a href="https://www.kegg.jp/feedback/copyright.html">KEGG copyright request (needed if you want to publish a KEGG pathway map created within MGX</a></li>
     </ul>
   </p>
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2020-12-23
+ <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2021-10-20
  </p>
 
  </body>
