update additional links

--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@ function showSlides(n) {
   <h3>Additional links</h3>
   <p>
     <ul>
-      <li>Synthetic metagenomes used in the MGX manuscript are available from the <a href="https://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a>.</li>
+      <li>Synthetic metagenomes used in the MGX manuscript are available from <del>the <a href="https://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a></del> <a href="https://doi.org/10.5281/zenodo.4382271">Zenodo</a>.</li>
       <li><a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology at JLU Giessen</a></li>
+      <li><a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/bcf/data-privacy">Data privacy statement</a></li>
       <li><a href="https://www.denbi.de/">de.NBI - German network for bioinformatics infrastructure</a></li>
       <li><a href="https://www.kegg.jp/feedback/copyright.html">KEGG copyright request (needed if you want to publish a KEGG pathway map created within MGX</a></li>
     </ul>
