--- a/index.html
+++ b/index.html
@@ -160,13 +160,16 @@ function showSlides(n) {
       <li>a contact address of a single person responsible for the project (PI or group leader)</li>
     </ul>
   </p>
+  <p>
+  All data submitted to MGX is kept confidential; we encourage submission of metadata and sequence datasets to the public <a href="https://www.insdc.org/">INSDC</a> databases.
+  </p>
 
   <h3>Documentation</h2>
   <p>
     The MGX user guide is available as an online 
     <a href="guide/index.html">HTML</a> or
     <a href="https://github.com/MGX-metagenomics/userguide/releases">PDF</a>
-    version.
+    version. MGX is academic research software; no warranty is expressed or implied.
   </p>
 
   <h3>MGX graphical user interface</h3>
@@ -196,11 +199,11 @@ function showSlides(n) {
   <h3>Additional links</h3>
   <p>
     <ul>
-      <li>Synthetic metagenomes used in the MGX manuscript are available from <del>the <a href="https://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a></del> <a href="https://doi.org/10.5281/zenodo.4382271">Zenodo</a>.</li>
+      <li>Synthetic metagenomes used in the MGX manuscript are available from <del>the <a href="https://www.cebitec.uni-bielefeld.de/">CeBiTec</a> FTP <a href="ftp://ftp.cebitec.uni-bielefeld.de/pub/software/mgx/benchmark_data/">server</a></del> <a href="https://doi.org/10.5281/zenodo.4382271">Zenodo</a></li>
       <li><a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology at JLU Giessen</a></li>
       <li><a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/bcf/data-privacy">Data privacy statement</a></li>
       <li><a href="https://www.denbi.de/">de.NBI - German network for bioinformatics infrastructure</a></li>
-      <li><a href="https://www.kegg.jp/feedback/copyright.html">KEGG copyright request (needed if you want to publish a KEGG pathway map created within MGX</a></li>
+      <li><a href="https://www.kegg.jp/feedback/copyright.html">KEGG copyright request</a> (needed if you want to publish a KEGG pathway map created within MGX)</li>
     </ul>
   </p>
 
