remove cebitec server instance

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ function showSlides(n) {
 
   <h3>Project request</h3>
   <p>
-    We operate and maintain two public MGX server instances hosted at the <a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology</a> group at <a href="https://www.uni-giessen.de/">JLU Giessen</a>
-    and <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a>, <a href="https://www.uni-bielefeld.de">Bielefeld University</a>. To
+    We operate and maintain <s>two</s> one public MGX server instances hosted at the <a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology</a> group at <a href="https://www.uni-giessen.de/">JLU Giessen</a>
+    <s>and <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a>, <a href="https://www.uni-bielefeld.de">Bielefeld University</a></s>. To
     obtain a protected project for analysis of own metagenome data, please 
     <a href="mailto:mgx@computational.bio.uni-giessen.de?subject=MGX%20private%20project%20request">get in touch with us</a> and provide the following
     information:
@@ -209,7 +209,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/fbz/fb08/Inst/bioinformatik/people/sebastianjaenicke">Sebastian Jaenicke</a>, 2021-10-20
+ <a href="https://www.uni-giessen.de/de/fbz/fb08/Inst/bioinformatik/people/current_members/sebastianjaenicke">Sebastian Jaenicke</a>, 2023-07-12
  </p>
 
  </body>
