--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@ existing tools.
     <img src="slides/8.png" style="width:80%">
   </div>
 
+  <div class="mySlides fade">
+    <img src="slides/9.png" style="width:80%">
+  </div>
+
+  <div class="mySlides fade">
+    <img src="slides/10.png" style="width:80%">
+  </div>
+
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -90,6 +98,8 @@ existing tools.
   <span class="dot" onclick="currentSlide(6)"></span>
   <span class="dot" onclick="currentSlide(7)"></span>
   <span class="dot" onclick="currentSlide(8)"></span>
+  <span class="dot" onclick="currentSlide(9)"></span>
+  <span class="dot" onclick="currentSlide(10)"></span>
 </div>
 
 <script>
@@ -128,7 +138,10 @@ function showSlides(n) {
     <ul>
       <li>Data and metadata capture</li>
       <li>Quality control reports</li>
-      <li>&gt; 20 analysis <a href="https://github.com/MGX-metagenomics/pipelines">pipelines</a> for taxonomic and functional analysis</li>
+      <li>analysis <a href="https://github.com/MGX-metagenomics/pipelines">pipelines</a> for taxonomic and functional analysis of raw reads</li>
+      <li>metagenome (co-)assembly and taxonomic binning for MAG recovery</li>
+      <li>de novo metatranscriptome assembly</li>
+      <li>workflows for taxonomic and functional annotation of assemblies</li>
       <li>High-quality charts and interactive visualizations</li>
       <li>Statistics: PCA, PCoA, Rarefaction, ..</li>
       <li>Fragment recruitment</li>
@@ -140,13 +153,48 @@ function showSlides(n) {
   <h3>News</h3>
   <p>
     <ul>
+      <li>2023-09-21: Public release of MGX 2.0, which supports metagenome coassembly, taxonomic binning and de novo metatranscriptome assembly</li>
       <li>2020-12-23: The <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a> has discontinued its FTP service; benchmark datasets used in the <a href="https://doi.org/10.1186/s40168-018-0460-1">MGX manuscript</a> have been moved to <a href="https://zenodo.org">Zenodo</a> and can be retrieved using the <a href="https://doi.org/10.5281/zenodo.4382271">10.5281/zenodo.4382271</a> DOI.</li>
       <li>2020-04-06: With the most recent database update, the default taxonomic classification workflow employed
   by MGX is now also able to recognize and classify <a href="https://en.wikipedia.org/wiki/Severe_acute_respiratory_syndrome_coronavirus_2">SARS-CoV-2</a> sequences.</li>
     </ul>
   </p>
 
-  <h3>Project request</h3>
+  <h3>MGX software installation</h3>
+  <p>
+    The latest version of the MGX application is provided as a platform-independent .zip archive from the <a href="https://github.com/MGX-metagenomics/MGX-gui/releases">releases</a> page. No installation is required, just extract the .zip archive.
+    If you are a previous user of MGX 1.0, make sure to download to download the latest MGX-(date).zip file; for MGX 2.0, all
+    releases are prefixed with MGX2-.
+  </p>
+
+  <h3>Documentation</h2>
+  <p>
+    The MGX user guide is available as an online 
+    <a href="guide/index.html">HTML</a> or
+    <a href="https://github.com/MGX-metagenomics/userguide/releases">PDF</a>
+    version. MGX is academic research software; no warranty is expressed or implied.
+  </p>
+
+  <h3>Public demonstration projects</h3>
+  <p>
+    If you want to try out MGX 2.0, we offer two public demonstration projects:
+    <ul>
+      <li>MGX2_Demo contains sequence data from the black band disease study previously
+          <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5240343/">published</a> by
+          Sato et al. that was used as a demonstration example in the upcoming MGX 2.0 publication 
+          (accession <a href="https://www.ebi.ac.uk/ena/browser/view/PRJNA321354">PRJNA321354</a>)
+      </li>
+      <li>MGX2_TermiteGut with metagenome and metatranscriptome date from the well-known termite gut
+          study; ENA project accession <a href="https://www.ebi.ac.uk/ena/browser/view/PRJNA454696">PRJNA454696</a>.
+      </li>
+    </ul>
+    To access these example projects, download the MGX 2.0 application and log in with username "mgxdemo"
+    and password "mgxdemo". Please note that only read access is permitted here, i.e. you can explore
+    all precomputed results and inspect the assemblies, but wont be able to initiate new analyses or 
+    delete existing data.
+  </p>
+
+  <h3>Private project request</h3>
   <p>
     We operate and maintain <s>two</s> one public MGX server instances hosted at the <a href="https://www.computational.bio.uni-giessen.de/">Bioinformatics and Systems Biology</a> group at <a href="https://www.uni-giessen.de/">JLU Giessen</a>
     <s>and <a href="https://www.cebitec.uni-bielefeld.de">Center for Biotechnology</a>, <a href="https://www.uni-bielefeld.de">Bielefeld University</a></s>. To
@@ -162,19 +210,6 @@ function showSlides(n) {
   </p>
   <p>
   All data submitted to MGX is kept confidential; we encourage submission of metadata and sequence datasets to the public <a href="https://www.insdc.org/">INSDC</a> databases.
-  </p>
-
-  <h3>Documentation</h2>
-  <p>
-    The MGX user guide is available as an online 
-    <a href="guide/index.html">HTML</a> or
-    <a href="https://github.com/MGX-metagenomics/userguide/releases">PDF</a>
-    version. MGX is academic research software; no warranty is expressed or implied.
-  </p>
-
-  <h3>MGX graphical user interface</h3>
-  <p>
-    The latest version of the MGX client application is provided as a platform-independent .zip archive from the <a href="https://github.com/MGX-metagenomics/MGX-gui/releases">releases</a> page.
   </p>
 
   <h3>Citation</h3>
@@ -209,7 +244,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/de/fbz/fb08/Inst/bioinformatik/people/current_members/sebastianjaenicke">Sebastian Jaenicke</a>, 2023-07-12
+ <a href="https://www.uni-giessen.de/de/fbz/fb08/Inst/bioinformatik/people/current_members/sebastianjaenicke">Sebastian Jaenicke</a>, 2023-09-21
  </p>
 
  </body>
