--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ function showSlides(n) {
     <ul>
       <li>MGX2_Demo contains sequence data from the black band disease study previously
           <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5240343/">published</a> by
-          Sato et al. that was used as a demonstration example in the upcoming MGX 2.0 publication 
+          Sato <i>et al.</i> that was used as a demonstration example in the upcoming MGX 2.0 publication 
           (accession <a href="https://www.ebi.ac.uk/ena/browser/view/PRJNA321354">PRJNA321354</a>)
       </li>
       <li>MGX2_TermiteGut with metagenome and metatranscriptome date from the well-known termite gut
@@ -190,7 +190,7 @@ function showSlides(n) {
     </ul>
     <p>
     To access these example projects, download the MGX 2.0 application and log in with username "mgxdemo"
-    and password "mgxdemo". Please note that only read access is permitted here, i.e. you can explore
+    and password "mgxdemo". Please note that only read access is permitted here, <i>i.e.</i> you can explore
     all precomputed results and inspect the assemblies, but wont be able to initiate new analyses or 
     delete existing data.
     </p>
