--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ function showSlides(n) {
   <h3>MGX software installation</h3>
   <p>
     The latest version of the MGX application is provided as a platform-independent .zip archive from the <a href="https://github.com/MGX-metagenomics/MGX-gui/releases">releases</a> page. No installation is required, just extract the .zip archive.
-    If you are a previous user of MGX 1.0, make sure to download to download the latest MGX-(date).zip file; for MGX 2.0, all
-    releases are prefixed with MGX2-.
+    If you are a previous user of MGX 1.0, make sure to download the latest MGX-(date).zip file; for MGX 2.0, all
+    releases are prefixed with MGX2 followed by a timestamp.
   </p>
 
   <h3>Documentation</h2>
