add section for source code

--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@ function showSlides(n) {
   All data submitted to MGX is kept confidential; we encourage submission of metadata and sequence datasets to the public <a href="https://www.insdc.org/">INSDC</a> databases.
   </p>
 
+  <h3>Source code availability</h3>
+  <p>
+    The MGX source code for the client library, GUI and all required server components is publicly available from the GitHub <a href="https://github.com/MGX-metagenomics/">repository</a>.
+  </p>
+
   <h3>Citation</h3>
   <p>
     <i>Flexible metagenome analysis using the MGX framework</i><br/>
