add biorxiv preprint for mgx 2.0

--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@ function showSlides(n) {
 
   <h3>Citation</h3>
   <p>
+    <i>MGX 2.0: Shotgun- and assembly-based metagenome and metatranscriptome analysis from a single source</i>
+    Sebastian Jaenicke, Sonja Diedrich, and Alexander Goesmann
+    bioRxiv 2023.09.21.558800
+    DOI: <a href="https://www.biorxiv.org/content/10.1101/2023.09.21.558800v1">10.1101/2023.09.21.558800</a><br/><br/>
+  </p>
+  <p>
     <i>Flexible metagenome analysis using the MGX framework</i><br/>
     Sebastian Jaenicke, Stefan P. Albaum, Patrick Blumenkamp, Burkhard Linke, Jens Stoye and Alexander Goesmann<br/>
     Microbiome 2018 <b>6</b>:76<br/>
@@ -251,7 +257,7 @@ function showSlides(n) {
 
  <hr>
  <p class="footer">
- <a href="https://www.uni-giessen.de/de/fbz/fb08/Inst/bioinformatik/people/current_members/sebastianjaenicke">Sebastian Jaenicke</a>, 2023-09-21
+ <a href="https://www.uni-giessen.de/de/fbz/fb08/Inst/bioinformatik/people/current_members/sebastianjaenicke">Sebastian Jaenicke</a>, 2023-09-25
  </p>
 
  </body>
