--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@ function showSlides(n) {
 
   <h3>Citation</h3>
   <p>
-    <i>MGX 2.0: Shotgun- and assembly-based metagenome and metatranscriptome analysis from a single source</i>
-    Sebastian Jaenicke, Sonja Diedrich, and Alexander Goesmann
-    bioRxiv 2023.09.21.558800
+    <i>MGX 2.0: Shotgun- and assembly-based metagenome and metatranscriptome analysis from a single source</i><br/>
+    Sebastian Jaenicke, Sonja Diedrich, and Alexander Goesmann<br/>
+    bioRxiv 2023.09.21.558800<br/>
     DOI: <a href="https://www.biorxiv.org/content/10.1101/2023.09.21.558800v1">10.1101/2023.09.21.558800</a><br/><br/>
   </p>
   <p>
