add jdk version

--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@ function showSlides(n) {
     If you are a previous user of MGX 1.0, make sure to download the latest MGX-(date).zip file; for MGX 2.0, all
     releases are prefixed with MGX2 followed by a timestamp.
   </p>
+  <p>
+  For MGX 2.0, a recent Java version is required. We recommend using at least
+  JDK 17.
+  </p>
 
   <h3>Documentation</h2>
   <p>
